# stm32-rtos-boilerplate

./: .clangd  .gitignore  LICENSE  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  debugger-breakpoint.h  main.cpp  stm32f4xx_hal_conf.h
src/cmake-helpers/: CMakeLists.txt
src/cmake-helpers/cmake/: FindFreeRTOS.cmake
